--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-	id="WebApp_ID" version="4.0">
-	<display-name>GDJ_Servlet</display-name>
-
-	<servlet>
-		<!-- name은 주로 변수명을 담음 -->
-		<servlet-name>fc</servlet-name>
-		<!-- Tomcat이 생성하려는 클래스의 풀패키지명을 명시 -->
-		<!-- new FrontControllers -->
-		<servlet-class>com.winter.app.controllers.FrontControllers</servlet-class>
-	</servlet>
-
-<!-- 	<servlet-mapping>
-		<servlet-name>fc</servlet-name>
-		<url-pattern>/*</url-pattern>
-	</servlet-mapping> -->
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+  <display-name>GDJ_Servlet</display-name>
+  
+  <servlet>
+  	<servlet-name>fc</servlet-name>
+  	<!-- Tomcat이 생성하려는 클래스의 풀패키지명을 명시 -->
+  	<!-- new FrontController -->
+  	<servlet-class>com.winter.app.controllers.FrontController</servlet-class>
+  </servlet>
+  
+<!--   <servlet-mapping>
+  	<servlet-name>fc</servlet-name>
+  	<url-pattern>/*</url-pattern>
+  </servlet-mapping>
+-->
+	
 </web-app>
