--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,10 +9,10 @@
   	<servlet-class>com.winter.app.controllers.FrontController</servlet-class>
   </servlet>
   
-<!--   <servlet-mapping>
+  <servlet-mapping>
   	<servlet-name>fc</servlet-name>
-  	<url-pattern>/*</url-pattern>
+  	<url-pattern>/</url-pattern>
   </servlet-mapping>
--->
+
 	
 </web-app>
